--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,27 +24,17 @@
     <string name="loading">Cargando…</string>
     <string name="error_generic">Ha ocurrido un error</string>
     <string name="no_data">No hay datos disponibles</string>
-    <string name="inicio">Inicio</string>
-    <string name="torneos">Torneos</string>
-    <string name="partidos">Partidos</string>
-    <string name="perfil">Perfil</string>
-    <string name="hola_usuario">¡Hola, Usuario!</string>
-    <string name="organiza_y_participa_en_torneos">Organiza y participa en torneos</string>
-    <string name="torneos_disponibles">Torneos Disponibles</string>
-    <string name="ver_todos">Ver todos</string>
-    <string name="cargando_torneos">Cargando torneos...</string>
-    <string name="partidos_pr_ximos">Partidos Próximos</string>
-    <string name="crear_torneo">+ Crear Torneo</string>
-    <string name="tournamaker">TournaMaker</string>
-    <string name="iniciar_sesi_n">Iniciar Sesión</string>
-    <string name="contrase_a">Contraseña</string>
-    <string name="sin_cuenta">¿No tienes cuenta? Regístrate aquí</string>
-    <string name="crear_cuenta">Crear Cuenta</string>
-    <string name="nombre_de_usuario">Nombre de usuario</string>
-    <string name="nombre_completo">Nombre completo</string>
-    <string name="registrarse">Registrarse</string>
-    <string name="con_cuenta">¿Ya tienes cuenta? Inicia sesión</string>
-    <string name="nombre_del_torneo">Nombre del Torneo</string>
-    <string name="descripci_n_del_torneo">Descripción del torneo...</string>
-    <string name="fecha_lugar">Fecha Lugar</string>
+
+    <string name="createTournament">Crear Torneo</string>
+    <string name="nextMatches">Próximos Partidos</string>
+    <string name="organizesAndParticipates">Organiza y Participa en Torneos</string>
+    <string name="helloUser">Hola Usuario</string>
+
+    <string name="withoutAccount">No tienes cuenta. Registrate aquí.</string>
+    <string name="withAccount">Ya tienes cuenta. Inicia sesión aquí.</string>
+    <string name="createAccount">Crear Cuenta</string>
+
+    <string name="dateAndPlace">Fecha y Lugar</string>
+    <string name="tournamentDescription">Descripción del torneo</string>
+    <string name="tournamentName">Nombre del torneo</string>
 </resources>
