--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,6 +28,7 @@
     <string name="createTournament">Crear Torneo</string>
     <string name="tournaments_available">Torneos Disponibles</string>
     <string name="matches_available">Partidos Disponibles</string>
+    <string name="teams_available">Equipos Disponibles</string>
 
     <string name="withoutAccount">No tienes cuenta. Registrate aquí.</string>
     <string name="withAccount">Ya tienes cuenta. Inicia sesión aquí.</string>
@@ -43,6 +44,7 @@
     <string name="create_team">Crear Equipo</string>
     <string name="see_all_tournaments_desc">Ver todos los torneos disponibles</string>
     <string name="see_all_matches_desc">Ver todos los partidos disponibles</string>
+    <string name="see_all_teams_desc">Ver todos los equipos disponibles</string>
     <string name="tournament_image_desc">Imagen del torneo</string>
     <string name="match_image_desc">Imagen del partido</string>
 
